# MTK_kernel_device_modules

./: .gitignore  Android.mk  BUILD.bazel  BUILD.bazel.eap  KMI_white_list  Kbuild  Kconfig.ext  Makefile  Makefile.ext  Makefile.include  Makefile.include.ddk  OWNERS  README.md  build.config.mtk_kernel_device_modules  build.sh  build_abi.sh  fake_manifest.xml  kenv.mk
drivers/block/zram/: BUILD.bazel  Kconfig  ilist.c  ilist.h  internal.h  mctrl.c  mctrl.h  smart_cache.c  xswapd.c  xswapd.h  zgroup.c  zgroup.h  zgroup_wb.c  zram_drv.c  zram_drv.h
drivers/char/hw_random/: BUILD.bazel  Makefile  sec-rng.c
drivers/char/rpmb/: BUILD.bazel  Kconfig  Makefile  cdev.c  core.c  rpmb-mtk.c  rpmb-mtk.h  rpmb_sim.c
drivers/clk/mediatek/: BUILD.bazel  Kconfig  Makefile  clk-bringup.c  clk-disable-unused.c  clk-fhctl-ap.c  clk-fhctl-debug.c  clk-fhctl-gpueb.c  clk-fhctl-mcupm.c  clk-fhctl-pll.c  clk-fhctl-sspm.c  clk-fhctl-vcp.c  clk-fhctl.c  clk-fhctl.h  clk-fmeter-mt6761.c  clk-fmeter-mt6765.c  clk-fmeter-mt6768.c  clk-fmeter-mt6781.c  clk-fmeter-mt6789.c  clk-fmeter-mt6833.c  clk-fmeter-mt6853.c  clk-fmeter-mt6855.c  clk-fmeter-mt6858.c  clk-fmeter-mt6877.c  clk-fmeter-mt6881.c  clk-fmeter-mt6893.c  clk-fmeter-mt6899.c  clk-fmeter-mt6991.c  clk-fmeter-mt6993.c  clk-fmeter.h  clk-gate.c  clk-gate.h  clk-mt6761-audio.c  clk-mt6761-fmeter.h  clk-mt6761-pg.c  clk-mt6761-pg.h  clk-mt6761-vcodec.c  clk-mt6761.c  clk-mt6765-fmeter.h  clk-mt6765-pg.c  (+174 more)
drivers/clocksource/: BUILD.bazel  Kconfig  timer-mediatek.c
drivers/cpufreq/: BUILD.bazel  mediatek-cpufreq-hw_fdvfs.c  mediatek-cpufreq-hw_main.c
drivers/devfreq/: BUILD.bazel  Makefile  mtk-dvfsrc-devfreq.c
drivers/dma-buf/heaps/: BUILD.bazel  Kconfig  Makefile  OWNERS  deferred-free-helper.c  dio_dma_mapper.c  mtk-deferred-free-helper.c  mtk_dmabuf_events.h  mtk_dmabuf_monitor.c  mtk_extend_system_heap.c  mtk_extend_system_heap.h  mtk_heap.h  mtk_heap_debug.c  mtk_heap_priv.h  mtk_heap_refill.c  mtk_page_pool.c  mtk_page_pool.h  mtk_sec_heap.c  mtk_sec_heap.h  mtk_sec_heap_main.c  mtk_sec_heap_priv.h  mtk_system_heap.c  mtk_tmem_interop.c  mtk_tmem_interop.h  page_pool.c  system_heap.c
drivers/dma/mediatek/: BUILD.bazel  Makefile  mtk-cqdma.c  mtk-uart-apdma.c  mtk-uart-apdma.h
drivers/edac/mediatek/: BUILD.bazel  Kconfig  Makefile  mtk_edac_slc.c
drivers/hooks/geniezone_vendor_hooks/: BUILD.bazel  Kconfig  Makefile  gzvm_hooks.c
drivers/i2c/busses/: BUILD.bazel  Kconfig  Makefile  i2c-mt65xx.c  mi_i2c-dev.c
drivers/i3c/master/: BUILD.bazel  Kconfig  Makefile  mtk-i3c-master-api.h  mtk-i3c-master-mt69xx.c
drivers/iommu/: BUILD.bazel  Kconfig  Makefile  mtk_iommu.c  mtk_iommu.h  mtk_iommu_arm32.c  mtk_iommu_v1.c  mtk_iommu_viommu.c  mtk_iommu_viommu.h
drivers/leds/: BUILD.bazel  Kconfig  Makefile  OWNERS  leds-aw21024-reg.h  leds-aw21024.c  leds-aw21024.h  leds-color21024-reg.h  leds-color21024.c  leds-color21024.h  leds-mt6360.c  leds-mt6362.c  leds-mtk-disp.c  leds-mtk-pwm.c  leds-mtk.c  leds-mtk.h  regulator-vibrator.c
drivers/mailbox/: BUILD.bazel  Makefile  mtk-ise-mailbox.c  mtk-ise-mailbox.h  mtk-mbox-mailbox.c
drivers/memory/: BUILD.bazel  Makefile  OWNERS  mtk-smi.c
drivers/mfd/: BUILD.bazel  Kconfig  Makefile  hyp-mt6685-core.c  hyp-mtk-spmi-pmic.c  hyp-spmi.h  mt6338-core.c  mt6360-core.c  mt6370.c  mt6375.c  mt6379-core.c  mt6379-i2c.c  mt6379-spmi.c  mt6379.h  mt6397-core.c  mt63xx-debug.c  mt6681-core.c  mt6685-335clk.c  mt6685-audclk.c  mt6685-core.c  mt6687-core.c  mt6720.c  mt6720s.c  mtk-spmi-pmic-debug.c  mtk-spmi-pmic-debug.h  mtk-spmi-pmic.c  rt9490.c
drivers/nvmem/: BUILD.bazel  Kconfig  Makefile  mt6338-efuse.c  mt635x-efuse.c  mt6681-efuse.c  mt6688-rtccon.c  mtk-devinfo.c
drivers/pwm/: BUILD.bazel  Makefile  pwm-mtk-disp.c
drivers/regulator/: BUILD.bazel  Kconfig  Makefile  aw37004-regulator.c  dio8015.c  et5904.c  et5907mv.c  fan53870-ldo.c  fan53870.c  mt6315-regulator.c  mt6316-regulator.c  mt6357-regulator.c  mt6358-regulator.c  mt6359p-regulator.c  mt6360-regulator.c  mt6363-regulator.c  mt6368-regulator.c  mt6369-regulator.c  mt6370-regulator.c  mt6373-regulator.c  mt6379-regulator.c  mt6661-regulator.c  mt6667-regulator.c  mt6681-regulator.c  mt6688.c  mtk-dvfsrc-regulator.c  mtk-extbuck-debug.c  mtk-vmm-isp71-regulator.c  rt4803.c  rt5133-regulator.c  rt6160-regulator.c  rt6160.h  sgm38120.c  sgm38121.c  warhol_wl2868c.c  warhol_wl2868c2.c  wl2866d.c  wl2866d2.c  wl28681c.c  wl28681c2.c  (+2 more)
drivers/remoteproc/: BUILD.bazel  Makefile  mtk_ccu_common.c  mtk_ccu_common.h  mtk_ccu_common_mssv.c  mtk_ccu_common_mssv.h  mtk_ccu_ipi.c  mtk_ccu_isp71.c  mtk_ccu_isp71_mssv.c  mtk_ccu_isp71_mssv.h  mtk_ccu_isp8_mssv_pmem.h  mtk_ccu_isp8_mssv_pmem_b.h  mtk_ccu_isp8l_mssv_pmem.h  mtk_ccu_isp8l_mssv_pmem_b.h
drivers/rpmsg/: BUILD.bazel  Makefile  mtk_rpmsg_mbox.c
drivers/spi/: BUILD.bazel  Kconfig  fp_spi.h  spi-mt65xx.c
drivers/spmi/: BUILD.bazel  Kconfig  Makefile  spmi-mtk-debug.c  spmi-mtk-gip.c  spmi-mtk-mpu.c  spmi-mtk-pmif-core.c  spmi-mtk.h
drivers/trusty/: BUILD.bazel  Kconfig  Makefile  OWNERS  trusty-ffa-transport.c  trusty-ffa.c  trusty-ffa.h  trusty-ipc-trace.h  trusty-ipc.c  trusty-irq-trace.h  trusty-irq.c  trusty-irq.h  trusty-log.c  trusty-log.h  trusty-mem.c  trusty-populate.c  trusty-private.h  trusty-sched-share-api.h  trusty-sched-share.c  trusty-sched-share.h  trusty-smc-arm.S  trusty-smc-arm64.S  trusty-smc-transport.c  trusty-smc.c  trusty-smc.h  trusty-test-arm64.S  trusty-test-main.c  trusty-test.c  trusty-test.h  trusty-trace.h  trusty-transport.h  trusty-virtio.c  trusty.c
drivers/ufs/: BUILD.bazel  Kconfig  Makefile  ufs-mediatek-btag.c  ufs-mediatek-dbg.c  ufs-mediatek-dbg.h  ufs-mediatek-ise.c  ufs-mediatek-mbrain.c  ufs-mediatek-mbrain.h  ufs-mediatek-mimic.c  ufs-mediatek-perf.c  ufs-mediatek-rpmb.c  ufs-mediatek-rpmb.h  ufs-mediatek-sip.h  ufs-mediatek-sysfs.c  ufs-mediatek-sysfs.h  ufs-mediatek.c  ufs-mediatek.h
drivers/watchdog/: BUILD.bazel  Kconfig  Makefile  mtk_wdt.c  mtk_wdt_hyper.c  mtk_wdt_hyper.h  sos_kick.c  uos_kick.c
mm/: Kconfig  (+2 more)
(+9002 files in other folders)
