package(
    default_visibility = [
        "//visibility:public",
    ],
)

load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("//build/bazel_mgk_rules:mgk.bzl", "define_mgk")

ddk_headers(
    name = "headers",
    hdrs = glob(["**/*.h"]),
    includes = ["."],
    linux_includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
)
mgk_kmi_symbol_list = None #"//kernel-mainline:android/abi_gki_aarch64_mtk"

filegroup(
    name = "mgk_configs",
    srcs = glob([
        "arch/arm64/configs/*",
        "kernel/configs/**",
        "**/Kconfig",
        "drivers/cpufreq/Kconfig.*",
    ]) + [
        "Kconfig.ext",
        # FIXME
        "Makefile.ext",
        "certs/mtk_signing_key.pem",
    ],
)
filegroup(
    name = "mgk_dt-bindings",
    srcs = glob([
        "include/dt-bindings/**",
        "include/dtc/**",
    ]),
)

# mgk_64_kmainline
load("//kernel_device_modules-mainline:kernel/kleaf/mgk_64.bzl",
     "mgk_64_defconfig",
     "mgk_64_kleaf_modules",
     "mgk_64_kleaf_eng_modules",
     "mgk_64_kleaf_userdebug_modules",
     "mgk_64_kleaf_user_modules",
     "mgk_64_common_modules",
     "mgk_64_common_eng_modules",
     "mgk_64_common_userdebug_modules",
     "mgk_64_common_user_modules",
     "mgk_64_kleaf_device_modules_srcs",
     "mgk_64_kleaf_device_modules_kconfigs",
     "mgk_64_kleaf_device_modules",
     "mgk_64_kleaf_platform_device_modules",
     "mgk_64_kleaf_eng_device_modules",
     "mgk_64_kleaf_platform_eng_device_modules",
     "mgk_64_kleaf_userdebug_device_modules",
     "mgk_64_kleaf_platform_userdebug_device_modules",
     "mgk_64_kleaf_user_device_modules",
     "mgk_64_kleaf_platform_user_device_modules",
     "mgk_64_device_modules",
     "mgk_64_platform_device_modules",
     "mgk_64_device_eng_modules",
     "mgk_64_platform_device_eng_modules",
     "mgk_64_device_userdebug_modules",
     "mgk_64_platform_device_userdebug_modules",
     "mgk_64_device_user_modules",
     "mgk_64_platform_device_user_modules"
)

define_mgk(
    name = "mgk_64_kmainline",
    defconfig = mgk_64_defconfig,
    kleaf_modules = mgk_64_kleaf_modules,
    kleaf_eng_modules = mgk_64_kleaf_eng_modules,
    kleaf_userdebug_modules = mgk_64_kleaf_userdebug_modules,
    kleaf_user_modules = mgk_64_kleaf_user_modules,
    common_modules = mgk_64_common_modules,
    common_eng_modules = mgk_64_common_eng_modules,
    common_userdebug_modules = mgk_64_common_userdebug_modules,
    common_user_modules = mgk_64_common_user_modules,
    kleaf_device_modules_srcs = mgk_64_kleaf_device_modules_srcs,
    kleaf_device_modules_kconfigs = mgk_64_kleaf_device_modules_kconfigs,
    kleaf_device_modules = mgk_64_kleaf_device_modules,
    kleaf_platform_device_modules = mgk_64_kleaf_platform_device_modules,
    kleaf_eng_device_modules = mgk_64_kleaf_eng_device_modules,
    kleaf_platform_eng_device_modules = mgk_64_kleaf_platform_eng_device_modules,
    kleaf_userdebug_device_modules = mgk_64_kleaf_userdebug_device_modules,
    kleaf_platform_userdebug_device_modules = mgk_64_kleaf_platform_userdebug_device_modules,
    kleaf_user_device_modules = mgk_64_kleaf_user_device_modules,
    kleaf_platform_user_device_modules = mgk_64_kleaf_platform_user_device_modules,
    device_modules = mgk_64_device_modules,
    platform_device_modules = mgk_64_platform_device_modules,
    device_eng_modules = mgk_64_device_eng_modules,
    platform_device_eng_modules = mgk_64_platform_device_eng_modules,
    device_userdebug_modules = mgk_64_device_userdebug_modules,
    platform_device_userdebug_modules = mgk_64_platform_device_userdebug_modules,
    device_user_modules = mgk_64_device_user_modules,
    platform_device_user_modules = mgk_64_platform_device_user_modules,
    symbol_list = mgk_kmi_symbol_list,
)
