load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl","kernel_version",)

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "ddk_src",
    srcs = glob([
        "**/Makefile",
        "**/Kbuild",
        "**/*.c",
        "**/*.h",
    ]),
)

ddk_headers(
    name = "iommu_public_headers",
    hdrs = glob([
        "mtk_iommu.h",
    ]),
    includes = ["."],
)

define_mgk_ddk_ko(
    name = "mtk_iommu",
    srcs = [
        "mtk_iommu.c",
    ],
    hdrs = glob([
        "mtk_iommu.h",
    ]),
    header_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/iommu:iommu_misc_headers".format(kernel_version),
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/iommu:iommu_secure".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/iommu:iommu_debug".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/iommu:mtk_iommu_util".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/smi:mtk-smi-dbg".format(kernel_version),
    ],
    includes = ["."],
    out = "mtk_iommu.ko",
)

define_mgk_ddk_ko(
    name = "mtk_iommu_arm32",
    srcs = [
        "mtk_iommu_arm32.c",
    ],
    hdrs = glob([
        "mtk_iommu.h",
    ]),
    header_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/iommu:iommu_misc_headers".format(kernel_version),
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/iommu:iommu_secure".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/iommu:iommu_debug".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/iommu:mtk_iommu_util".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/smi:mtk-smi-dbg".format(kernel_version),
    ],
    includes = ["."],
    out = "mtk_iommu_arm32.ko",
)

