load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl", "kernel_version",)

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "srcs",
    srcs = glob([
          "**/Makefile",
          "**/Kbuild",
          "**/*.c",
          "**/*.h",
    ]),
)

define_mgk_ddk_ko(
    name = "mtk-smi",
    srcs = [
        "mtk-smi.c",
    ],
    hdrs = glob([
        "**/*.h",
    ]),
    ko_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/aee/aed:aee_aed".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/mme:mme".format(kernel_version),
        "//kernel_device_modules-{}/drivers/clk/mediatek:clk-common".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/mminfra:mtk-mminfra-util".format(kernel_version),
    ],
    copts = [
        "-I$(DEVICE_MODULES_PATH)/drivers/memory",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/mt-plat/",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/mme",
    ],
    includes = ["."],
)
