load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "ddk_src",
    srcs = glob([
        "**/Makefile",
        "**/Kbuild",
        "**/*.c",
        "**/*.h",
    ]),
)

define_mgk_ddk_ko(
    name = "mt6360-core",
    srcs = [
        "mt6360-core.c",
    ],
    includes = ["include"],
)

define_mgk_ddk_ko(
    name = "mt6370",
    srcs = [
        "mt6370.h",
        "mt6370.c",
    ],
    includes = ["include"],
)

define_mgk_ddk_ko(
    name = "mt6375",
    srcs = [
        "mt6375.c",
    ],
    includes = ["include"],
)

define_mgk_ddk_ko(
    name = "mt6379s",
    srcs = [
        "mt6379.h",
        "mt6379-spmi.c",
        "mt6379-core.c",
    ],
    includes = ["include"],
)

define_mgk_ddk_ko(
    name = "rt9490",
    srcs = [
        "rt9490.c",
    ],
    includes = ["include"],
)
