load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "ddk_makefiles",
    srcs = glob([
        "**/Makefile",
        "**/Kbuild",
        "**/*.c",
        "**/*.h",
    ]),
)

define_mgk_ddk_ko(
    name = "nvmem_mtk-devinfo",
    srcs = [
        "mtk-devinfo.c",
    ],
)

define_mgk_ddk_ko(
    name = "nvmem-mt635x-efuse",
    srcs = [
        "mt635x-efuse.c",
    ],
)

define_mgk_ddk_ko(
    name = "nvmem-mt6688-rtccon",
    srcs = [
        "mt6688-rtccon.c",
    ],
)

define_mgk_ddk_ko(
    name = "nvmem-mt6338-efuse",
    srcs = [
        "mt6338-efuse.c",
    ],
)