load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl", "kernel_version",)
package(
    default_visibility = [
        "//visibility:public",
    ],
)
filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)
filegroup(
    name = "ddk_src",
    srcs = glob([
        "**/Makefile",
        "**/Kbuild",
        "**/*.c",
        "**/*.h",
        "*.h",
    ]),
)
define_mgk_ddk_ko(
    name = "pwm-mtk-disp",
    srcs = [
        "pwm-mtk-disp.c",
    ],
    includes = ["."],
    hdrs = glob([
    	"**/*.h",
   	]),

)
