load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl", "kernel_version")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "srcs",
    srcs = glob([
          "**/Makefile",
          "**/Kbuild",
          "**/*.c",
          "**/*.h",
    ]),
)

define_mgk_ddk_ko(
    name = "mtk_ccu_mssv",
    srcs = [
        "mtk_ccu_isp71_mssv.c",
        "mtk_ccu_common_mssv.c",
        "mtk_ccu_ipi_mssv.c",
        "mtk_ccu_common_mssv.h",
        "mtk_ccu_isp71_mssv.h",
        "mtk_ccu_isp7sp_mssv_ddr.h",
        "mtk_ccu_isp7sp_mssv_ddr_b.h",
        "mtk_ccu_isp7sp_mssv_dmem.h",
        "mtk_ccu_isp7sp_mssv_dmem_b.h",
        "mtk_ccu_isp7sp_mssv_pmem.h",
        "mtk_ccu_isp7sp_mssv_pmem_b.h",
        "mtk_ccu_isp7spl_mssv_pmem.h",
        "mtk_ccu_isp8_mssv_pmem.h",
        "mtk_ccu_isp8_mssv_pmem_b.h",
        "mtk_ccu_isp8l_mssv_pmem.h",
        "mtk_ccu_isp8l_mssv_pmem_b.h",
    ],
    includes = [
        ".",
    ],
    header_deps = [
        "//kernel_device_modules-{}/drivers/iommu/arm/arm-smmu-v3:smmu_public_headers".format(kernel_version),
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/mtk-interconnect:mtk-icc-core".format(kernel_version),
        "//kernel_device_modules-{}/drivers/dma-buf/heaps:system_heap".format(kernel_version),
    ],
    copts = [
        "-I$(srctree)/drivers/remoteproc/",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/mtk-interconnect/",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/iommu/",
        "-I$(DEVICE_MODULES_PATH)/drivers/iommu/arm/arm-smmu-v3/",
        "-I$(DEVICE_MODULES_PATH)/drivers/dma-buf/heaps/",
    ],
)

define_mgk_ddk_ko(
    name = "mtk_ccu",
    srcs = [
        "mtk_ccu_isp71.c",
        "mtk_ccu_common.c",
        "mtk_ccu_ipi.c",
        "mtk_ccu_common.h",
        "mtk_ccu_isp71.h",
    ],
    includes = [
        ".",
    ],
    header_deps = [
        "//kernel_device_modules-{}/drivers/iommu/arm/arm-smmu-v3:smmu_public_headers".format(kernel_version),
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/mtk-interconnect:mtk-icc-core".format(kernel_version),
        "//kernel_device_modules-{}/drivers/dma-buf/heaps:system_heap".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/smi:mtk-smi-dbg".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/aee/mrdump:mrdump".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/aee/aed:aee_aed".format(kernel_version),
   ],
    copts = [
        "-I$(srctree)/drivers/remoteproc/",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/mtk-interconnect/",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/iommu/",
        "-I$(DEVICE_MODULES_PATH)/drivers/iommu/arm/arm-smmu-v3/",
        "-I$(DEVICE_MODULES_PATH)/drivers/dma-buf/heaps/",
    ],
)
