load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl","kernel_version",)

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "ddk_srcs",
    srcs = glob([
	"**/Makefile",
	"**/*.c",
	"**/*.h"
    ]),
)

define_mgk_ddk_ko(
    name = "mtk_rpmsg_mbox",
    srcs = [
        "mtk_rpmsg_mbox.c"
    ],
    hdrs = glob([
        "**/*.h"
    ]),
    copts = [
        "-I$(srctree)/drivers/rpmsg",
    ],
    ko_deps = ["//kernel_device_modules-{}/drivers/soc/mediatek:mtk-mbox".format(kernel_version)],
)

