load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl","kernel_version",)
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "ddk_src",
    srcs = glob([
        "**/Makefile",
        "**/Kbuild",
        "**/*.c",
        "**/*.h",
    ]),
)

ddk_headers(
    name = "spi_headers",
    hdrs = glob([
        "**/*.h",
    ]),
    includes = ["."],
    visibility = ["//visibility:public"],
)

define_mgk_ddk_ko(
    name = "spi-mt65xx",
    hdrs = glob([
        "**/*.h",
    ]),
    srcs = [
        "spi-mt65xx.c",
    ],
    header_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/blocktag:headers".format(kernel_version),
        "//kernel_device_modules-{}/drivers/ufs:headers".format(kernel_version),
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/sda:irq-dbg".format(kernel_version),
        "//kernel_device_modules-{}/drivers/soc/mediatek:mtk-dvfsrc".format(kernel_version),
    ],

    includes = [
        ".",
    ],

    copts = [
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/mt-plat/",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/mtk-interconnect/",
        "-I$(srctree)/include/",
    ],
)
